fixing css selctor for word-wrap: break-word

--- a/public/assets/css/postcards.css
+++ b/public/assets/css/postcards.css
@@ -31,7 +31,7 @@ header {
 
 div#faq { margin-top:40px; }
 
-#tweets-container blockquote { 
+.tweets-list blockquote { 
 	overflow: hidden;
 	word-wrap: break-word; 
 }
